kubernetes/paperless/tika.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-tika
  namespace: paperless
  labels:
    app: paperless-tika
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-tika
  template:
    metadata:
      labels:
        app: paperless-tika
    spec:
      containers:
        - name: tika
          image: apache/tika:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9998
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi
