kubernetes/paperless/gotenberg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-gotenberg
  namespace: paperless
spec:
  selector:
    app: paperless-gotenberg
  ports:
    - port: 3000
      targetPort: 3000
