kubernetes/paperless/paperless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-web
  namespace: paperless
spec:
  selector:
    app: paperless
  ports:
    - name: http
      port: 8000
      targetPort: http
