kubernetes/paperless/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-postgres
  namespace: paperless
spec:
  selector:
    app: paperless-postgres
  ports:
    - port: 5432
      targetPort: 5432
