kubernetes/paperless/tika-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-tika
  namespace: paperless
spec:
  selector:
    app: paperless-tika
  ports:
    - port: 9998
      targetPort: 9998
